mobile utility add

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <title>404 Page</title>
 </head>
 <body>
-    
+    <div class="reve">
+        <a class="ba" href="#"><-back to the home</a>
+    </div>
     <h1 class="q">4</h1>
     <div class="z" onclick="grow()">
         <h2 class="f">></h2>
