chang velocity, img perso

--- a/index.html
+++ b/index.html
@@ -11,11 +11,9 @@
     <div class="reve">
         <a class="ba" href="#"><-back to the home</a>
     </div>
-    <h1 class="q">4</h1>
-    <div class="z" onclick="grow()">
-        <h2 class="f">></h2>
-        <h1 class="q">0</h1>
-    </div>
+    <img src="img/quatre.svg" alt="4" class="q">
+        <img src="img/zero.svg" alt="4" class="q" onclick="grow()">
+        <img src="img/quatre.svg" alt="4" class="q">
     <div class="im">
         <div class="start">
             <div class="btn" onclick="setTimeout(start(), 1000)">Lancer</div>
@@ -43,7 +41,6 @@
 
         </div>
     </div>
-    <h1 class="q">4</h1>
 
     <script src="app.js">
 
