affiche discord add

--- a/index.html
+++ b/index.html
@@ -5,7 +5,35 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>404 Page</title>
+    <title>Error 404 ;-)</title>
+    <meta
+    name="description"
+    content="Oh non vous êtes sur une erreur 404, vous pouvez tout de même vous divertir avec un bonneteau disponible en appuyant sur le 0"
+    />
+    <meta
+    property="og:title"
+    content="Error 404 ;-)"
+    />
+    <meta
+        property="og:description"
+        content="Oh non vous êtes sur une erreur 404, vous pouvez tout de même vous divertir avec un bonneteau disponible en appuyant sur le 0"
+    />
+    <meta property="og:site_name" content="" />
+    <meta property="og:type" content="website" />
+    <meta
+        property="og:url"
+        content="https://jejeoh.github.io/404-Page-Concept"
+    />
+    <meta
+        property="og:image"
+        content="img/page.webp"
+    />
+
+    <meta name="theme-color" content="#fafcff" />
+
+    <!-- Twitter card -->
+    <meta name="twitter:card" content="summary_large_image" />
+
 </head>
 <body>
     <div class="reve">
