add shadow + stop bug colision

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     />
     <meta
         property="og:image"
-        content="img/page.webp"
+        content="https://jejeoh.github.io/404-Page-Concept/img/page.webp"
     />
 
     <meta name="theme-color" content="#fafcff" />
